--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
 </ul>
 <p>To get started, proceed to <a href="/Installation/index.html">the installation guide</a>!</p>
 <p>The Discord server for Vinegar can be found <a href="https://discord.gg/dzdzZ6Pps2">here</a>.</p>
+<h3 id="requirements"><a class="header" href="#requirements">Requirements</a></h3>
+<ul>
+<li>X86-64 CPU with support for <a href="/Troubleshooting/index.html">AVX2</a></li>
+<li>GPU that has atleast support for OpenGL 4.0 or Vulkan 1.1</li>
+</ul>
 
                     </main>
 
