--- a/Home/index.html
+++ b/Home/index.html
@@ -150,7 +150,7 @@
 <p>The Discord server for Vinegar can be found <a href="https://discord.gg/dzdzZ6Pps2">here</a>.</p>
 <h3 id="requirements"><a class="header" href="#requirements">Requirements</a></h3>
 <ul>
-<li>X86-64 CPU with support for <a href="/Troubleshooting/index.html">AVX2</a></li>
+<li>X86-64 CPU with support for <a href="/Troubleshooting/index.html">AVX</a></li>
 <li>GPU that has atleast support for OpenGL 4.0 or Vulkan 1.1</li>
 </ul>
 
