deploy: 9ac8d681bd720d57ce91665c35d0568fe4e33f39

--- a/Troubleshooting/index.html
+++ b/Troubleshooting/index.html
@@ -222,7 +222,7 @@ Some users have reported that creating a <a href="https://github.com/umlaeute/v4
 <h3 id="buggy-qt-fonts"><a class="header" href="#buggy-qt-fonts">Buggy QT fonts</a></h3>
 <p>This is a known issue with WineD3D. Enabling DXVK in the configuration file should solve this issue.</p>
 <h3 id="flickering-widgets-and-plugin-windows"><a class="header" href="#flickering-widgets-and-plugin-windows">Flickering widgets and plugin windows</a></h3>
-<h2 id="this-is-a-known-issue-with-wined3d-enabling-dxvk-in-the-configuration-file-should-solve-this-issue"><a class="header" href="#this-is-a-known-issue-with-wined3d-enabling-dxvk-in-the-configuration-file-should-solve-this-issue">This is a known issue with WineD3D. Enabling DXVK in the configuration file should solve this issue.</a></h2>
+<p>This is a known issue with WineD3D. Enabling DXVK in the configuration file should solve this issue.</p>
 
                     </main>
 
