--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <li>Graphics: OpenGL 4.0 or Vulkan 1.1 support.</li>
 <li>Wine: At least Wine 8.0.
 <ul>
-<li>Depending on the version, the <a href="https://github.com/flathub/io.github.vinegarhq.Vinegar/blob/master/patches/wine/segregrevert.patch">segregrevert patch</a> might be required.</li>
+<li>The <a href="https://github.com/flathub/io.github.vinegarhq.Vinegar/blob/master/patches/wine/segregrevert.patch">segregrevert patch</a> is required starting Wine 8.16.</li>
 </ul>
 </li>
 </ul>
