deploy: 9eb9f9ef73cdacb4b0f0ab7e4d827592c336759b

--- a/Home/index.html
+++ b/Home/index.html
@@ -170,7 +170,8 @@
 </ul>
 </li>
 </ul>
-<p>Roblox® is a registered Roblox Corporation trademark. VinegarHQ is not affiliated with Roblox Corporation.</p>
+<hr />
+<p><em>Roblox® is a registered Roblox Corporation trademark. VinegarHQ is not affiliated with Roblox Corporation.</em></p>
 
                     </main>
 
