--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
 </ul>
 </li>
 </ul>
-<p>Roblox® is a registered Roblox Corporation trademark. VinegarHQ is not affiliated with Roblox Corporation.</p>
+<hr />
+<p><em>Roblox® is a registered Roblox Corporation trademark. VinegarHQ is not affiliated with Roblox Corporation.</em></p>
 
                     </main>
 
