deploy: 710ec43fdf57de6447b2b73b489ddba0c1524b63

--- a/Configuration/tips-and-tricks/index.html
+++ b/Configuration/tips-and-tricks/index.html
@@ -152,21 +152,7 @@
            └── ouch.ogg
 </code></pre>
 <h2 id="fflags"><a class="header" href="#fflags">FFlags</a></h2>
-<p>This section is undocumented; below is a list of fflags that can be set. Credits to <a href="https://github.com/pizzaboxer/bloxstrap/blob/main/Bloxstrap/FastFlagManager.cs">Bloxstrap</a>.</p>
-<pre><code class="language-toml"># See https://github.com/pizzaboxer/bloxstrap/wiki/A-guide-to-FastFlags#gui-hiding
-DFIntCanHideGuiGroupId = 32380007
-
-# See IGMenuVersions in Bloxstrap for more details
-FFlagDisableNewIGMinDUA = true
-FFlagEnableInGameMenuControls = true
-
-# true for 21 bars, false for 10 bars; in graphics quality
-FFlagFixGraphicsQuality = true
-
-DFFlagDebugRenderForceTechnologyVoxel = false # Voxel
-FFlagDebugForceFutureIsBrightPhase2 = false # ShadowMap
-FFlagDebugForceFutureIsBrightPhase = true # Future
-</code></pre>
+<p>See <a href="https://github.com/pizzaboxer/bloxstrap/wiki/A-guide-to-FastFlags">Bloxstrap's guide to FastFlags</a>.</p>
 <h2 id="environmental-variables"><a class="header" href="#environmental-variables">Environmental variables</a></h2>
 <ul>
 <li><code>WINEESYNC</code>: allows Wine Staging to use Esync, please see <a href="https://github.com/lutris/docs/blob/master/HowToEsync.md">HowToEsync</a> for more information.</li>
