--- a/Troubleshooting/index.html
+++ b/Troubleshooting/index.html
@@ -145,6 +145,15 @@
 <li>Open up a terminal and type the following command: <code>grep avx /proc/cpuinfo</code> it will highlight with red the AVX flags, if you get no output it means that your current CPU doesn't support AVX.</li>
 <li>While having Vinegar installed type the following command: <code>vinegar sysinfo</code> or if using flatpak: <code>flatpak run io.github.vinegarhq.Vinegar sysinfo</code> it will show information about your system, this includes support for AVX.</li>
 </ul>
+<h2 id="disabling-split-lock-detection"><a class="header" href="#disabling-split-lock-detection">Disabling Split Lock Detection</a></h2>
+<p>Currently, Roblox uses split lock operations. Unfortunately, <a href="https://lwn.net/Articles/790464/">this is not considered a good practice</a>, so by default, the Linux Kernel will throttle any programs that do so. This has been reported to have a major performance hit, sometimes reducing Roblox's frame rate to a mere fraction of what it's supposed to be.</p>
+<p>Fortunately, you can disable the throttling by setting the <a href="https://docs.kernel.org/arch/x86/buslock.html#software-handling"><code>split_lock_detect</code></a> kernel parameter to <code>&quot;off&quot;</code>. The correct way to do this depends on both your distro and which bootloader your system uses. We recommend you to check your distro's documentation for more information:</p>
+<ul>
+<li>Debian-based distributions (Debian, Ubuntu, Mint, etc.): <a href="https://www.debian.org/releases/stable/amd64/ch05s03.en.html">Debian manual - 5.3. Boot Parameters</a></li>
+<li>Fedora-based distributions: <a href="https://docs.fedoraproject.org/en-US/fedora/latest/system-administrators-guide/kernel-module-driver-configuration/Working_with_the_GRUB_2_Boot_Loader/#sec-Making_Persistent_Changes_to_a_GRUB_2_Menu_Using_the_grubby_Tool">Fedora Docs - Making Persistent Changes to a GRUB 2 Menu Using the grubby Tool</a></li>
+<li>Arch-based distributions (Arch Linux, Manjaro, etc.): <a href="https://wiki.archlinux.org/title/Kernel_parameters">Arch Linux Wiki - Kernel parameters</a></li>
+</ul>
+<p>If you're unsure on how to do this, please ask in your distro's support channels.</p>
 <hr />
 <h2 id="general-issues"><a class="header" href="#general-issues">General Issues</a></h2>
 <p>Known Vinegar issues which affect both Roblox Player and Roblox Studio:</p>
