--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
 </p>
 <h2 id="welcome-to-the-documentation-of-the-vinegar-project"><a class="header" href="#welcome-to-the-documentation-of-the-vinegar-project">Welcome to the documentation of the Vinegar project!</a></h2>
 <ul>
-<li>Vinegar is a transparent, minimal, configurable, and fast bootstrapper for Roblox Player and Roblox Studio.</li>
+<li>Vinegar is a fast, minimal, and robust bootstrapper for Roblox Player and Roblox Studio that has many ease-of-use features.</li>
 <li>The software and documentation are both open source, and can be accessed <a href="https://github.com/vinegarhq">on GitHub</a>.</li>
 <li>There is no graphical configuration interface for Vinegar at this time.</li>
-<li>Vinegar is an well-designed alternative to <a href="https://brinkervii.gitlab.io/grapejuice/">Grapejuice</a>, designed for advanced Linux users.</li>
+<li>Vinegar is an alternative to <a href="https://brinkervii.gitlab.io/grapejuice/">Grapejuice</a>, designed for advanced Linux users.</li>
 </ul>
 <p>The Discord server for Vinegar can be found <a href="https://discord.gg/dzdzZ6Pps2">here</a>.</p>
 <hr />
