--- a/Installation/guides/flatpak.html
+++ b/Installation/guides/flatpak.html
@@ -137,13 +137,13 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="installation-from-flatpak"><a class="header" href="#installation-from-flatpak">Installation from Flatpak</a></h1>
-<p>Vinegar's Flatpak can be found <a href="https://flathub.org/apps/details/io.github.vinegarhq.Vinegar">here</a>. </p>
+<p>Vinegar's Flatpak can be found <a href="https://flathub.org/apps/details/org.vinegarhq.Vinegar">here</a>. </p>
 <p>Installing it manually from a terminal:</p>
-<pre><code>flatpak install flathub io.github.vinegarhq.Vinegar
-flatpak run io.github.vinegarhq.Vinegar
+<pre><code>flatpak install flathub org.vinegarhq.Vinegar
+flatpak run org.vinegarhq.Vinegar
 </code></pre>
 <p>To uninstall manually from a terminal:</p>
-<pre><code>flatpak uninstall --delete-data io.github.vinegarhq.Vinegar
+<pre><code>flatpak uninstall --delete-data org.vinegarhq.Vinegar
 </code></pre>
 
                     </main>
