--- a/Configuration/tips-and-tricks/index.html
+++ b/Configuration/tips-and-tricks/index.html
@@ -141,7 +141,7 @@
 <p>In Vinegar, a directory called <code>overlay</code> will be copied directly to the Roblox Player and Studio upon launching; this can be used to override files of Roblox, allowing for modifications!</p>
 <p>The <code>overlay</code> folder is not created by default, and it is located always along with the configuration file, which is depending on your install method:</p>
 <ul>
-<li>On Flatpak, it's located in <code>~/.var/app/io.github.vinegarhq.Vinegar/config/vinegar/overlay</code></li>
+<li>On Flatpak, it's located in <code>~/.var/app/org.vinegarhq.Vinegar/config/vinegar/overlay</code></li>
 <li>On other methods, it's located in <code>~/.config/vinegar/overlay</code></li>
 </ul>
 <p>Vinegar requires no extra configuration for the folder to work.</p>
