--- a/Installation/guides/source.html
+++ b/Installation/guides/source.html
@@ -164,12 +164,12 @@ $ make
 </code></pre>
 <p>Alternatively, the following lines can be appended to <code>mimeapps.list</code> for users without <a href="https://linux.die.net/man/1/xdg-mime"><code>xdg-mime</code></a> on their system, which is used by the Makefile <code>mime</code> target:</p>
 <pre><code>[Default Applications]
-x-scheme-handler/roblox-player=io.github.vinegarhq.Vinegar.player.desktop
-x-scheme-handler/roblox=io.github.vinegarhq.Vinegar.player.desktop
-x-scheme-handler/roblox-studio=io.github.vinegarhq.Vinegar.studio.desktop
-x-scheme-handler/roblox-studio-auth=io.github.vinegarhq.Vinegar.studio.desktop
-application/x-roblox-rbxl=io.github.vinegarhq.Vinegar.studio.desktop
-application/x-roblox-rbxlx=io.github.vinegarhq.Vinegar.studio.desktop
+x-scheme-handler/roblox-player=org.vinegarhq.Vinegar.player.desktop
+x-scheme-handler/roblox=org.vinegarhq.Vinegar.player.desktop
+x-scheme-handler/roblox-studio=org.vinegarhq.Vinegar.studio.desktop
+x-scheme-handler/roblox-studio-auth=org.vinegarhq.Vinegar.studio.desktop
+application/x-roblox-rbxl=org.vinegarhq.Vinegar.studio.desktop
+application/x-roblox-rbxlx=org.vinegarhq.Vinegar.studio.desktop
 </code></pre>
 
                     </main>
