deploy: 27d8a0c871a3bdf8a96b074acb3f9460d3f2e685

--- a/Installation/guides/package.html
+++ b/Installation/guides/package.html
@@ -152,7 +152,7 @@ $ makepkg -si
 # dnf install vinegar
 </code></pre>
 <h3 id="gentoo"><a class="header" href="#gentoo">Gentoo</a></h3>
-<p><a href="https://github.com/vinegarhq/ebuild"><img src="https://img.shields.io/badge/Gentoo-ebuild-6e56af&amp;style=flat-square" alt="Gentoo Package" /></a></p>
+<p><a href="https://github.com/vinegarhq/ebuild"><img src="https://img.shields.io/badge/Gentoo-ebuild-6e56af?style=flat-square" alt="Gentoo Package" /></a></p>
 <p>Firstly, make sure the repository module for eselect is installed:</p>
 <pre><code class="language-console"># emerge app-eselect/eselect-repository
 </code></pre>
@@ -172,7 +172,7 @@ $ makepkg -si
 <pre><code class="language-console"># apk add vinegar
 </code></pre>
 <h3 id="source-mage"><a class="header" href="#source-mage">Source Mage</a></h3>
-<p><a href="https://github.com/sourcemage/grimoire-z-rejected/tree/master/z-games/vinegar"><img src="https://img.shields.io/badge/Source%20Mage-spell-fe0000&amp;style=flat-square" alt="Source Mage Package" /></a></p>
+<p><a href="https://github.com/sourcemage/grimoire-z-rejected/tree/master/z-games/vinegar"><img src="https://img.shields.io/badge/Source%20Mage-spell-fe0000?style=flat-square" alt="Source Mage Package" /></a></p>
 <p>First, make sure the games grimoire is added:</p>
 <pre><code class="language-console"># scribe add games
 </code></pre>
