--- a/Configuration/index.html
+++ b/Configuration/index.html
@@ -189,7 +189,7 @@
 <tr><td><code>&quot;prime-discrete&quot;</code></td><td>Runs Roblox with your discrete gpu.*</td></tr>
 <tr><td><code>&quot;integrated&quot;</code></td><td>Runs Roblox with your integrated graphics.*</td></tr>
 <tr><td><code>&quot;&quot;</code></td><td>Skip logic; leave gpu choice up to your Vulkan/OpenGL drivers. Vulkan typically chooses the fastest gpu in your system, while OpenGL chooses the default.</td></tr>
-<tr><td><code>&quot;[int]&quot;</code></td><td>Runs Roblox with the gpu corresponding to the given index.<br/>Use the <code>sysinfo</code> command to show a list of gpus in your system and their indexes.</td></tr>
+<tr><td><code>&quot;&lt;int&gt;&quot;</code></td><td>Runs Roblox with the gpu corresponding to the given index.<br/>Use the <code>sysinfo</code> command to show a list of gpus in your system and their indexes.</td></tr>
 </tbody></table>
 <p><sub>*On non-PRIME systems, this value has the same effect as `""`.</sub></p>
 <p><br/>Rich presence for Studio may not function correctly, as the BloxstrapRPC protocol had only been implemented for Player; keep in mind that Discord RPC includes telemetry by default.</p>
